@@ -148,6 +148,14 @@ GameAnvil은 Java 21 버전을 지원합니다. 버전에 따라 일부 설정 �
 
 실행 설정이 완료되면 Main 클래스의 main() 함수 좌측의 초록색 삼각형 아이콘을 클릭하여 `Run 'Run With JDK21'` 실행을 선택합니다. 이렇게 한 번 실행한 이후에는 IntelliJ 우측 상단의 초록색 삼각형 Run 아이콘을 클릭해도 서버가 실행됩니다.
 
+`Run 'Run With JDK21'`로 실행을 해야 GameAnvil 서버 실행에 필요한 VM 옵션이 적용이 됩니다. 만약 Main 클래스의 main() 함수를 그냥 실행하는 경우에는, **Edit Configurations...**에서 아래의 필수 VM 옵션을 추가해주어야 합니다.
+
+```
+"--add-opens", "java.base/java.lang=ALL-UNNAMED",
+"--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED"
+"-XX:+UseG1GC"
+```
+
 ![](https://static.toastoven.net/prod_gameanvil/images/v2_0/tutorial/basic-tutorial/10_gameanvil_run.png)
 
 서버가 정상적으로 구동되면 서버 구동 상태 관련 로그들이 다수 출력됩니다.
